@@ -224,7 +224,7 @@
 
 #define SWAP_CHAR( x, y ) {char c; c = x; x = y; y = c;}
 
-#define DenoraFree(x) if (!BadPtr(x)) free(x)
+#define DenoraFree(x) if (x) free(x)
 
 /*************************************************************************/
 /* Setup how we define our macro fro externing data                      */
