@@ -3,6 +3,7 @@ Denora v1.5.0-git
 -------------
 
 Additions
+12/07/09 Making preparations to get rid of adns
 12/06/12 Added channelmode +R to scarynet
 12/04/20 Added country lookup for servers to support #46@magirc
 11/04/22 r432 Added parameter support for !stats and !gstats
@@ -11,8 +12,9 @@ Additions
 11/02/11 r416 Added support for ircd-rizon
 
 Changes
+12/07/09 Updated ScaryNet Protocol
 12/07/06 Changed delete_user to properly and warning free cleanup the channels
-12/07/05 Changed all free()'s into DenoraFree() in order to prevent double free()'s
+12/07/05 Changed a lot of free()'s into DenoraFree() in order to prevent double free()'s
 12/06/29 Undone a few changes as I might see issues
 12/06/27 Commented out a little more at src/db.c
 12/06/27 Bumped to 1.5.0-git-501
@@ -29,6 +31,8 @@ Changes
 11/02/11 r416 Updated Windows installer
 
 Fixes
+12/07/08 Lots of changes in users.c/channels.c/ctcp.c
+12/07/08 Fixed p10_gline to support 2.10.12's 6 arg gline format
 12/07/02 Fixed Config not respecting DMEMORY settings, also did MYSQL the correct way now
 12/07/02 Fixed debug output regarding nick changes
 12/06/27 Fixed a few possible memleaks (thx cedric for the valgrind report)
